[package]
name = "mma8452q"
version = "0.1.0"
authors = ["Tristan Lostroh <tl8roy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A platform agnostic driver to interface with the MMA8452Q 3-Axis Accelerometer via I2C [embedded-hal] and implements the [`Accelerometer` trait][trait] from the `accelerometer` crate.  This chip can be found on Sparkfun's MMA8452Q breakout board."
keywords = ["accelerometer", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "0.2"
accelerometer = "0.11"


[features]
default = []
out_f32 = []

[dependencies.cast]
default-features = false
version = "0.2"

[dev-dependencies]
embedded-hal-mock = "0.7"

[profile.release]
lto = true